and Add BaseActivity
Signed-off-by: Sun <yinglong.sun@hpe.com>

--- a/app/src/main/res/layout/menu_activity_first.xml
+++ b/app/src/main/res/layout/menu_activity_first.xml
@@ -1,25 +1,37 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@mipmap/logo">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@mipmap/logo"
+    android:gravity="center">
 
     <FrameLayout
-        android:id="@+id/content_layout"
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
     </FrameLayout>
+
+
+    <!--    <ImageView
+            android:id="@+id/face"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_below="@+id/left_drawer"
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/toux" />-->
 
     <ListView
         android:id="@+id/left_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/common_black_alpha_88"
         android:choiceMode="singleChoice"
-        android:background="#1110"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
-
+        android:paddingTop="10dp" />
 </android.support.v4.widget.DrawerLayout>
