--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -9,18 +9,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     tools:context="com.dxc.mycollector.RegisterAcitvity">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:counterEnabled="true"
-        app:counterMaxLength="6"
-        app:counterOverflowTextAppearance="@style/ErrorStyle"
         android:layout_marginTop="10dp"
-        >
-
+        app:counterOverflowTextAppearance="@style/ErrorStyle">
         <EditText
+            android:id="@+id/siguername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Username"
@@ -32,30 +30,43 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:counterEnabled="true"
-        app:counterMaxLength="12"
-        app:counterOverflowTextAppearance="@style/ErrorStyle"
         android:layout_marginTop="10dp">
 
+    </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:counterOverflowTextAppearance="@style/ErrorStyle">
+
         <EditText
+            android:id="@+id/sigpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
-            android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
-
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp">
+
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:counterOverflowTextAppearance="@style/ErrorStyle">
+
         <EditText
+            android:id="@+id/sigrepassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="RePassword"
-            android:inputType="textPassword"
+            android:hint="rePassword"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:singleLine="true" />
@@ -64,11 +75,11 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-
+        android:layout_marginTop="10dp"
+        app:counterOverflowTextAppearance="@style/ErrorStyle">
 
         <EditText
+            android:id="@+id/sigphone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone"
@@ -78,28 +89,67 @@
             android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
-    <Spinner
-        android:id="@+id/spinner4"
-        android:layout_width="64dp"
-        android:layout_height="wrap_content" />
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="64dp"
-        android:layout_height="wrap_content" />
+    </android.support.design.widget.TextInputLayout>
 
-    <Spinner
-        android:id="@+id/spinner3"
-        android:layout_width="64dp"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <Spinner
+            android:id="@+id/spin_province"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/spin_city"
+            android:layout_width="112dp"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/spin_county"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <EditText
+            android:id="@+id/sigaddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Address"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:singleLine="true" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <RadioGroup
+        android:id="@+id/radiogroup1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <android.support.v7.widget.AppCompatRadioButton
+            android:id="@+id/male"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -107,6 +157,7 @@
             android:textSize="16sp" />
 
         <android.support.v7.widget.AppCompatRadioButton
+            android:id="@+id/female"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -119,7 +170,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary"
+        android:background="@mipmap/btn_bg"
         android:text="CREATE ACCOUNT"
         android:textColor="@android:color/white"
         android:textSize="20sp" />
