--- a/app/src/main/res/layout/show_bluetooth_fileslist_main_layout.xml
+++ b/app/src/main/res/layout/show_bluetooth_fileslist_main_layout.xml
@@ -3,45 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".TaskDownloadActivity">
 
     <RelativeLayout
         android:id="@+id/headlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentTop="true"
-            android:text="任务下载"
-            android:textSize="18dp"
-            />
-        <Button
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="110dp"
-            android:id="@+id/taskAdd"
-            android:background="@mipmap/add_task"
-            android:layout_toRightOf="@+id/center"
-            />
+            android:text="测量数据列表"
+            android:textSize="18dp" />
+
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="3dp"
-            android:layout_centerHorizontal="true"
             android:layout_below="@+id/center"
-            android:background="@color/huise"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
+            android:background="@color/huise"
             android:paddingLeft="1080dp"
             android:paddingRight="10dp"
-            android:singleLine="true"
-            android:id="@+id/textView" />
+            android:singleLine="true" />
 
         <!--
             <Button
@@ -59,13 +52,13 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/headlayout"
         android:layout_marginTop="2dp">
+
         <ListView
+            android:id="@+id/showbluetoothfilelistView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/listView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-             />
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 </RelativeLayout>
