--- a/app/src/main/res/layout/show_bluetooth_list_item_layout.xml
+++ b/app/src/main/res/layout/show_bluetooth_list_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,35 +18,38 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/file_name"
+                android:id="@+id/show_bluetoothfile_file_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
                 android:text="文件名" />
 
             <TextView
-                android:id="@+id/file_size"
+                android:id="@+id/show_bluetoothfile_file_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="0/100" />
+                android:text="2017-8-23 09:11:12"
+                android:textColor="@color/dim_foreground_material_dark"
+                android:textSize="10dp" />
 
         </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/checkbox"
+        <!--<Button
+            android:id="@+id/upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:button="@drawable/download_checkbox_bg"
-            android:checked="true" />
+            android:layout_weight="1"
+            android:background="@mipmap/btn_bg"
+            android:text="解析" />-->
+        <TextView
+            android:id="@+id/jiexi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:textColor="@color/blue_deep"
+            android:text="解析" />
+
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        android:max="100"
-        android:progress="30"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
 </LinearLayout>
