调整侧滑菜单间距显示问题

--- a/app/src/main/res/layout/menu_activity_first.xml
+++ b/app/src/main/res/layout/menu_activity_first.xml
@@ -27,8 +27,8 @@
 
     <ListView
         android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
+        android:layout_width="300dp"
+        android:layout_height="fill_parent"
         android:layout_gravity="start"
         android:background="@color/common_black_alpha_88"
         android:choiceMode="singleChoice"
