--- a/app/src/main/res/layout/menu_fragment_planet.xml
+++ b/app/src/main/res/layout/menu_fragment_planet.xml
@@ -3,5 +3,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/logo"
-    android:gravity="center"
-    android:padding="32dp" />
+    android:gravity="center"/>
