--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/item_r"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_black_alpha_00"
+    android:background="@color/shouyebg"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="10dp">
@@ -14,43 +14,46 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:gravity="center_horizontal"
         android:orientation="vertical">
-
         <ImageView
             android:id="@+id/lgface"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_alignBottom="@+id/name"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
             android:src="@mipmap/toux" />
+        <TextView
+            android:id="@+id/name1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:text="李经理 | 项目经理"
+            android:textColor="@color/common_white"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="50dp"
+            android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/item_lin"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_below="@+id/item_tltle"
-        android:layout_marginTop="150dp"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/item_lin_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/lgicon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/more" />
 
             <TextView
@@ -61,8 +64,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="TextView"
-                android:textColor="@color/common_color_ad"
-                android:textSize="15sp" />
+                android:textColor="@color/common_white"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <TextView
@@ -70,10 +73,9 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_below="@+id/name"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="5dp"
             android:background="@color/huise"
             android:paddingLeft="1080dp"
+            android:layout_marginTop="10dp"
             android:singleLine="true" />
     </LinearLayout>
 </RelativeLayout>
