添加侧滑菜单背景颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="shouyebg">#38454F</color>
     <color name="forgetpwd">#FC6F75</color>
     <color name="loginTextColor">#838D8F</color>
     <color name="registerTextColor">#425F9F</color>
